EPviewer
(c)Raja S
rajajs {at} gmail {dot} com

version 0.9.8
-------------
* Use native icons on toolbar for file open and save
* Drag and drop for reordering in playlist editor


version 0.9.5
--------------
* Can import powerpoint presentations !
* Added toolbar button and menu item for removing all calipers
* Fixed flickering on resizing on windows
* Notes and changes are saved now on closing frame using the close button
* Fixed bug in windows compiled exe which resulted in inability to open tif files
* Sane default directory when creating playlist
* Fullscreen mode with Ctrl-F
* Cursor changes appropriately when repositioning caliper

version 0.9.2
--------------
* Added preferences dialog to edit preferences

version 0.9.1
--------------
October 15, 2008
* Bug fix - crop frame can extend outside image borders now
* Bug fix - calipers are removed when calibration is cancelled after second attempt
* Left click on canvas starts new caliper
* Right click cancels caliper at any point when caliper is active
* Playlists can be created, edited, saved and loaded

version 0.9
-------------
 October 01, 2008
 * Notes and playlist reside in tabs in a split window
 * Image can be resized without losing caliper and calib coordinates
 * Multiple active calipers at any time
 * Loaded images can be cropped and rotated with transformation saved
 * Can save image in multiple  formats now


version 0.8.0
-------------
Aug 09, 2008
  * Removed the ability to create slides
  * Notes, calibration etx are stored as a pickled dictionary
  * Added ability to sketch (doodle) on the image
  * No tabs in the frame. Note opens as separate window
  * Keyboard shortcuts functional

version 0.7.0
------------
Dec 25, 2007

  Error redirection to a log file
  No note file if there is no text, calibration or zoomframe to store
  Unlimited number of slides
  Only show slides if required
  Fixed error in importing tiff plugin in the compiled windows binary